tests/toylang/neg/001105_mutation.toylang
program a = { if a then var; } .
